App-Database/Db-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstapp-db-deployment
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstapp-db-web
  template:
    metadata:
      labels:
        app: firstapp-db-web
    spec:
      containers:
      - name: firstapp-db
        image: naveen352/msgapp-db:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - pg_isready      #the official postgres:16 image includes pg_isready endpoint
            - -h
            - 127.0.0.1
            - -p
            - '5432'
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 6
          successThreshold: 1
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1

---

apiVersion: v1
kind: Service
metadata:
  name: firstapp-db-service
  namespace: database
spec:
  selector:
    app: firstapp-db-web
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
