App-Database/Network-Policy.yaml
#(recommended): Lock down the whole database namespace, then allow-list of what that can be accessed by db 

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: database
spec:
  podSelector: {}         # select ALL pods in this namespace
  policyTypes:
  - Ingress               # deny all ingress by default

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-apps
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: firstapp-db-web             # <-- your DB pods must have this label
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: firstapp
      podSelector:
        matchLabels:
          app: firstapp-web
#    - namespaceSelector:
#        matchLabels:
#          kubernetes.io/metadata.name: secondapp
#      podSelector:
#        matchLabels:
#          app: secondapp-web
    # Optional (tighter security): restrict to DB port(s)
    # ports:
    # - protocol: TCP
    #   port: 5432   # e.g., Postgres
    # - protocol: TCP
    #   port: 3306   # e.g., MySQL


#This combo means:

#By default, no one can talk to any pod in database.
#Only the specified client pods may talk to pods labeled app=db (and only on ports you list, if you set ports).
